# tailmon

./: .gitignore  LICENSE  README.md  build.sh  go.mod  go.sum  pyproject.toml
cmd/tailmon/: main.go
deploy/: README.md  com.bosphorify.studiod.plist  com.bosphorify.tailmon.plist  install-client.sh  install-macos.sh  install-server.sh  install-windows.ps1  uninstall-client.sh  uninstall-macos.sh  uninstall-server.sh  update-server.sh
docs/: architecture.md  fleet.md  overview.md  progress.md
docs/plans/: 01-foundation-and-collector.md  02a-cli-and-deploy-scripts.md  03-phase-2-5-polish.md  04-phase-3-control-endpoints.md  05-phase-4-menubar-app.md  v2-menubar.md  v2-tailmon-mvp.md
internal/agent/: agent.go  cache.go  soak_test.go  top_test.go
internal/aggregate/: aggregate.go
internal/discover/: discover.go  discover_test.go
internal/sample/: exec.go  gpu_nvidia.go  gpu_nvidia_test.go  platform_darwin.go  platform_darwin_test.go  platform_linux.go  platform_windows.go  sample.go  top_test.go
internal/tui/: tui.go  view.go
internal/version/: version.go
menubar/: Info.plist  Package.swift  STATUS.md  build.sh  install.sh  test.sh  uninstall.sh
src/collector/: __init__.py  __main__.py  (+4 more)
tests/: conftest.py  test_audit.py  test_auth.py  test_build_default_sources.py  test_config.py  test_control.py  test_health.py  test_memory_macos.py  test_ports.py  test_ports_dedupe.py  test_ports_parser.py  test_powermetrics.py  test_processes.py  test_shared_auth.py  test_ssh.py  test_ssh_collector_real.py  test_stats.py  test_system.py  test_system_cpu_cache.py  test_system_memory.py  test_tailscale.py  test_tmux.py  test_tmux_collector.py
(+95 files in other folders)
