[project]
name = "studio-cli"
version = "0.1.0"
description = "Monitor and control a headless Mac Studio from a MacBook over Tailscale."
readme = "README.md"
requires-python = ">=3.12"
# Core dependencies stay minimal: only the shared pydantic models need them.
# The collector and the client each pull in their own extras so that the
# Mac Studio install (which runs as root) does not transitively depend on
# `click` / `rich` / `httpx`.
dependencies = [
    "pydantic>=2.8",
]

[project.optional-dependencies]
collector = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psutil>=6.0",
]
client = [
    "click>=8.1",
    "rich>=13.7",
    "httpx>=0.27",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.6",
    # dev pulls collector + client transitive deps so the full test suite
    # (collector + CLI) can run from a single `uv sync`.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psutil>=6.0",
    "click>=8.1",
    "rich>=13.7",
]

[project.scripts]
studiod = "collector.__main__:main"
studio = "studio_cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/collector", "src/shared", "src/studio_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/collector", "src/shared", "src/studio_cli"]
omit = ["*/__main__.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
